--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^3.4.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
+    "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mercadopago": "^1.5.7",
@@ -18,6 +20,7 @@
     "node-sass": "^5.0.0",
     "query-string": "^7.0.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
